Added a streamlit dashboard

--- a/Lung Cancer Prediction & Analysis/lung_cancer_analysis.ipynb
+++ b/Lung Cancer Prediction & Analysis/lung_cancer_analysis.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "4                  1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
     "# Create a numeric-only DataFrame (drop non-numeric columns)\n",
     "df_numeric = df.select_dtypes(include=[np.number])\n",
     "\n",
-    "df_numeric.head()"
+    "df_numeric.head()\n"
    ]
   },
   {
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,9 @@
     "print(df['AGE_GROUP'].value_counts(sort=False))  # Keep order\n",
     "\n",
     "print(\"\\nDistribution of cases by age groups and pulmonary disease:\")\n",
-    "print(df.groupby(['AGE_GROUP', 'PULMONARY_DISEASE'], observed=False).size().unstack())\n"
+    "print(df.groupby(['AGE_GROUP', 'PULMONARY_DISEASE'], observed=False).size().unstack())\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -582,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
